# zar

./: Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon
src/: app.rs  commands.rs  config.rs  fs.rs  history.rs  input.rs  main.rs  secrets.rs  source.rs  state.rs  test_support.rs  ui.rs  vfs.rs
