[package]
name = "zar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
directories = "6.0"
openssl-sys = { version = "0.9", features = ["vendored"] }
ratatui = "0.29"
remotefs = "0.3"
remotefs-ftp = "0.4"
remotefs-ssh = { version = "0.7", default-features = false, features = ["libssh2-vendored"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.17"
toml = "0.8"
url = "2"

[build-dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
